--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,15 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-# Site settings
+# Site Settings
 title: Tempus fugit!
 email: robbie.cao@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+description: >          # '>' means to ignore newlines until "baseurl:"
+    Robbie Cao's GitHub I/O
+# Above text will appear in your document head meta (for
+# Google search results) and in your feed.xml site description.
+baseurl: ""                         # Subpath of site, e.g. /blog
+url: "http://robbie-cao.github.io"  # Base hostname & protocol for site
 twitter_username: robbie_cao
 github_username:  robbie-cao
 
