Add plugin for textile and others
Signed-off-by: Robbie Cao <robbie.cao@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,13 @@ kramdown:
 gems:
     - jekyll-coffeescript
     - jekyll-paginate
+    - jekyll-textile-converter
+    - jekyll-toc
+    - jekyll-tagging
+    - jekyll_figure
+
+# Textile
+textile_ext: "textile,txtl,tl"
 
 # Default Setting for GitHub (Cannot be Changed)
 lsi: false
