Add plugin and markdown extension config
Signed-off-by: Robbie Cao <robbie.cao@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,16 @@ gems:
     - jekyll-toc
     - jekyll-tagging
     - jekyll_figure
+    - jekyll-mentions
+    - jekyll-redirect-from
+    - jekyll-sitemap
+    - jekyll-feed
 
-# Textile
+
+# Markdown Extension
+markdown_ext: "markdown,mdown,md"
+
+# Textile Extension
 textile_ext: "textile,txtl,tl"
 
 # Default Setting for GitHub (Cannot be Changed)
